# bitcoin-utxo-lp

./: .gitignore  .pylintrc  Makefile  README.md  canister_ids.json  dfx.json  pyproject.toml
.github/workflows/: publish.yml
canisters/backend/: README.md  main.py
examples/: README.md  large_number_of_utxos.py  mixed_above_and_below_target.py  simple_coin_selection.py  uniform_inputs_prefer_smaller_utxos.py
python/: Makefile  pyproject.toml
python/examples/: large_number_of_utxos.py  mixed_above_and_below_target.py  replay_case.py  simple_coin_selection.py
python/tests/: test_optimality_exhaustive.py  test_properties_hypothesis.py  test_smoke.py
src/bitcoin_utxo_lp/: __init__.py  model.py  solver.py  types.py
tests/: test_cases_v1.py  test_simple_model.py  test_smoke.py  test_unit_simple_model.py
tests/fixtures/: cases_v1.json
tests/utils/: gen_cases.py
