[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bitcoin-utxo-lp"
version = "0.1.0"
description = ""
authors = [
  {name = "Antonio Ventilii"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "bitcoin_utxo_lp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.7"
mypy = "^1.17.1"
toml-sort = "^0.24.2"
types-requests = "^2.32.4.20250913"
pandas-stubs = "^2.3.0.250703"
